[feat]minecraft server blog